@@ -1,3 +1,10 @@
+2004-07-07  MenTaLguY  <mental@rydia.net>
+
+	* src/document.cpp, src/document.h, src/document-undo.cpp,
+	  src/sp-object.h, src/sp-object.cpp:
+	  renamed object garbage collection routines to fit the "orphan"
+	  terminology
+
 2004-06-07  Carl Hetherington <inkscape@carlh.net>
 
 	* src/main.cpp: tentative fix for startup crash on Win32.  Ensure
